--- a/app/views/report/reportingProcess.html
+++ b/app/views/report/reportingProcess.html
@@ -1,41 +1,52 @@
 <div class="animated bounceInRight">
     <div class="card">
         <div class="card-header">
-            <h2>Reporte (Productor)</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>Reporte de Proceso</h2>
+                </div>
+            </div>
         </div>
         <div class="card-body table-responsive">
-            <table datatable="" dt-options="dtOptions" class="table table-striped table-bordered">
+            <table datatable="ng" dt-options="dtOptions" class="table table-striped table-bordered">
                 <thead>
                     <tr>
-                        <th>Fecha</th>
-                        <th>Variedad</th>
-                        <th>Remisión</th>
-                        <th>Cilindro</th>
-                        <th>Folio</th>
-                        <th>Kgs. Origen</th>
-                        <th>Fecha de Proceso</th>
-                        <th>Sacos</th>
-                        <th>Kilogramos</th>
-                        <th>Sacos Segunda</th>
-                        <th>Kilogramos</th>
-                        <th>Total</th>
+                        <th rowspan="2">Variedad</th>
+                        <th colspan="3">Sacos de Primera</th>
+                        <th colspan="3">Kgs. de Primera</th>
+                        <th rowspan="2">Total Kgs. Primera</th>
+                        <th rowspan="2">Total Kgs. Segunda</th>
+                        <th rowspan="2">Total Kgs. Tercera</th>
+                        <th rowspan="2">% 1ra</th>
+                        <th rowspan="2">% 2da</th>
+                        <th rowspan="2">% 3ra</th>
+                        <th rowspan="2">Kilos Totales</th>
+                    </tr>
+                    <tr>
+                        <th>Chicas</th>
+                        <th>Medianas</th>
+                        <th>Grandes</th>
+                        <th>CH</th>
+                        <th>M</th>
+                        <th>G</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="sampling in producerReport">
-                        <td>{{sampling.Id}}</td>
-                        <td>{{sampling.DateCapture | date:'dd/MM/yyyy HH:mm'}}</td>
-                        <td>{{sampling.SampleWeight}}</td>
-                        <td>{{sampling.HumidityPercent}}</td>
-                        <td>{{sampling.WalnutNumber}}</td>
-                        <td>{{sampling.Performance}}</td>
-                        <td>{{sampling.TotalWeightOfEdibleNuts}}</td>
-                        <td>{{sampling.SacksFirst}}</td>
-                        <td>{{sampling.KilosFirst}}</td>
-                        <td>{{sampling.SacksSecond}}</td>
-                        <td>{{sampling.KilosSecond}}</td>
-                        <td>{{sampling.SacksThird}}</td>
-                        <td>{{sampling.KilosThird}}</td>
+                    <tr ng-repeat="report in reportingProcess">
+                        <td>{{report.Variety}}</td>
+                        <td>{{report.SacksFirstSmall}}</td>
+                        <td>{{report.SacksFirstMedium}}</td>
+                        <td>{{report.SacksFirstLarge}}</td>
+                        <td>{{report.KilogramsFirstSmall}}</td>
+                        <td>{{report.KilogramsFirstMedium}}</td>
+                        <td>{{report.KilogramsFirstLarge}}</td>
+                        <td>{{report.TotalKilogramsFirst}}</td>
+                        <td>{{report.TotalKilogramsSecond}}</td>
+                        <td>{{report.TotalKilogramsThird}}</td>
+                        <td>{{report.PercentageFirst}}</td>
+                        <td>{{report.PercentageSecond}}</td>
+                        <td>{{report.PercentageThird}}</td>
+                        <td>{{report.TotalKilos}}</td>
                     </tr>
                 </tbody>
             </table>
