--- a/app/views/users.html
+++ b/app/views/users.html
@@ -38,23 +38,16 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="sroles" class="col-sm-2 control-label">Roles</label>
+                    <label for="roleF" class="col-sm-2 control-label">Roles</label>
                     <div class="col-sm-10">
                         <div class="fg-line select">
-                            <select class="form-control" ng-model="registration.RoleId">
-                            <option ng-repeat="role in roles" ng-selected="registration.RoleId == role.Id" value="{{role.Id}}">{{role.Name}}</option>
-                        </select>
+                            <select id="roleF" class="form-control" data-ng-model="registration.Role" ng-options="role.Name for role in roles"></select>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="signUp()">Enviar</button>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div data-ng-hide="message==''" class="alert alert-danger">
-                        {{message}}
+                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="signUp(registration)">Enviar</button>
                     </div>
                 </div>
             </div>
