--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,15 +1,20 @@
-<div class="col-sm-4">
-    <div class="card">
+<div class="row">
+    <div class="col-sm-4">
+        <div class="card">
+            <div id="pieChart"></div>
+        </div>
+    </div>
+    <div class="col-sm-4">
+        <div class="card">
+            <div id="barChart"></div>
+        </div>
+    </div>
+    <div class="col-sm-4">
+        <div class="card">
 
+        </div>
     </div>
 </div>
-<div class="col-sm-4">
-    <div class="card">
-
-    </div>
-</div>
-<div class="col-sm-4">
-    <div class="card">
-
-    </div>
+<div class="card">
+    <div id="barChartTime"></div>
 </div>
