--- a/app/views/grill/grillAdd.html
+++ b/app/views/grill/grillAdd.html
@@ -28,11 +28,10 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="field" class="col-sm-2 control-label">Campo</label>
+                    <label for="fieldF" class="col-sm-2 control-label">Campo</label>
                     <div class="col-sm-10">
-                        <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="field" name="FieldName" placeholder="campo" data-ng-model="grill.FieldName">
-                            <small class="help-block has-error" style="color:red" ng-show="!grillForm.$pristine && grillForm.FieldName.$error.required">El Campo es requerido.</small>
+                        <div class="fg-line select">
+                            <select id="fieldF" class="form-control" ng-model="grill.Field" ng-options="field.FieldName for field in fields"></select>
                         </div>
                     </div>
                 </div>
