--- a/app/views/reception/receptionAdd.html
+++ b/app/views/reception/receptionAdd.html
@@ -29,12 +29,10 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="fieldName" class="col-sm-2 control-label">Nombre del Campo</label>
+                    <label for="fieldF" class="col-sm-2 control-label">Campo</label>
                     <div class="col-sm-10">
-                        <div class="fg-line">
-                            <input type="text" required class="form-control input-sm" id="fieldName" name="FieldName" placeholder="nombre del campo"
-                                data-ng-model="reception.FieldName">
-                            <small class="help-block has-error" style="color:red" ng-show="!receptionForm.$pristine && receptionForm.FieldName.$error.required">Nombre del Campo es requerido.</small>
+                        <div class="fg-line select">
+                            <select id="fieldF" class="form-control" ng-model="reception.Field" ng-options="field.FieldName for field in fields"></select>
                         </div>
                     </div>
                 </div>
