--- a/app/views/grill/grillIssue.html
+++ b/app/views/grill/grillIssue.html
@@ -6,8 +6,8 @@
         <div class="card-body card-padding">
             <div role="tabpanel">
                 <ul class="tab-nav" role="">
-                    <li><a href="#addIssueGrill" aria-controls="addIssueGrill" role="tab" data-toggle="tab">Agregar Salida</a></li>
-                    <li><a href="#IssueGrills" aria-controls="IssueGrils" role="tab" data-toggle="tab">Salidas</a></li>
+                    <li><a href="#addIssueGrill" target="_self" aria-controls="addIssueGrill" role="tab" data-toggle="tab">Agregar Salida</a></li>
+                    <li><a href="#IssueGrills" target="_self" aria-controls="IssueGrils" role="tab" data-toggle="tab">Salidas</a></li>
                 </ul>
             </div>
             <div class="tab-content">
@@ -49,7 +49,7 @@
                                 <div class="form-group fg-line">
                                     <input type="text" disabled required class="form-control input-sm" id="grillIssueDate" placeholder="Fecha" value="{{ data.dateDropDownLink | date:'dd-MM-yyyy HH:mm a' }}">
                                     <div class="dropdown">
-                                        <a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown" data-target="#" href="#"><i class="md md-event"></i></a>
+                                        <a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown" data-target href><i class="md md-event"></i></a>
                                         <ul class="dropdown-menu" role="menu">
                                             <datetimepicker data-ng-model="data.dateDropDownLink" data-datetimepicker-config="{ dropdownSelector: '#dropdown1' }" />
                                         </ul>
