--- a/app/views/grill/grillCurrentInv.html
+++ b/app/views/grill/grillCurrentInv.html
@@ -5,7 +5,7 @@
         </div>
         <div class="card-body card-padding">
             <div class="table-responsive">
-                <div class="col-sm-12 actionbar">
+                <!--<div class="col-sm-12 actionbar">
                     <div class="form-group">
                         <label for="isearch" class="col-sm-2 control-label">Buscar</label>
                         <div class="col-sm-12">
@@ -15,57 +15,46 @@
                         </div>
                     </div>
                 </div>
-                <hr>
-                <button class="btn btn-link" ng-click="generatePDFCurrent()">
-                <span class="glyphicon glyphicon-share"></span>Exportar PDF
-            </button>
-                <table id="grillCurrentInvTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 70em;" fixed-header>
-                    <thead>
-                        <tr>
-                            <th>No. de Parilla</th>
-                            <th>Fecha de Captura</th>
-                            <th>Recepciones</th>
-                            <th>Tamaño</th>
-                            <th>Sacos</th>
-                            <th>Kilos</th>
-                            <th>Calidad</th>
-                            <th>Variedad</th>
-                            <th>Productor</th>
-                            <th>Huerta/Lote</th>
-                            <th>Peso de la Muestra</th>
-                            <th>Humedad</th>
-                            <th>No.Nueces por Kilo</th>
-                            <th>Rendimiento</th>
-                            <th>Total</th>
-                            <th>Operaciones</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="grill in grills | filter:searchGrills">
-                            <td>{{grill.Folio}}</td>
-                            <td>{{grill.DateCapture | date: 'dd/MM/yyyy HH:mm'}}</td>
-                            <td>{{grill.Receptions}}</td>
-                            <td>{{grill.Size}}</td>
-                            <td>{{grill.Sacks}}</td>
-                            <td>{{grill.Kilos}}</td>
-                            <td>{{grill.Quality}}</td>
-                            <td>{{grill.Variety}}</td>
-                            <td>{{grill.Producer}}</td>
-                            <td>{{grill.Batch}}</td>
-                            <td>{{grill.SampleWeight}}</td>
-                            <td>{{grill.HumidityPercent}}</td>
-                            <td>{{grill.WalnutNumber}}</td>
-                            <td>{{grill.Performance}}</td>
-                            <td>{{grill.TotalWeightOfEdibleNuts}}</td>
-                            <td>
-                                <button class="btn btn-default" ng-click="confirmationDelete(grill.Id, grill.Folio)" data-toggle="tooltip" data-placement="bottom" title="Eliminar">
-                                <i class="md md-delete"></i>
-                            </button>
-                                </button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <hr>-->
+                <div ng-show="grills.length >= 1">
+                    <div id="toolbar">
+                        <button class="btn btn-link" ng-click="generatePDFCurrent()">
+                            <span class="glyphicon glyphicon-share"></span>Exportar PDF
+                        </button>
+                    </div>
+                    <table id="grillManageTable" 
+                        data-toggle="table" 
+                        data-show-refresh="true" 
+                        data-show-columns="true"
+                        data-toolbar="#toolbar" 
+                        data-unique-id="Id" 
+                        data-pagination="true" 
+                        data-search="true" 
+                        data-show-export="true"
+                        data-page-list="[10, 50, 100, 200, TODO]">
+                        <thead>
+                            <tr>
+                                <th data-field="Folio" data-align="center" data-sortable="true">No. de Parrilla</th>
+                                <th data-field="DateCapture" data-align="center" data-sortable="true" data-formatter="dateFormatter">Fecha de Captura</th>
+                                <th data-field="Receptions" data-align="center" data-sortable="true">Recepciones</th>
+                                <th data-field="Size" data-align="center" data-sortable="true">Tamaño</th>
+                                <th data-field="Sacks" data-align="center" data-sortable="true">Sacos</th>
+                                <th data-field="Kilos" data-align="center" data-sortable="true">Kilos</th>
+                                <th data-field="Quality" data-align="center" data-sortable="true">Calidad</th>
+                                <th data-field="Variety" data-align="center" data-sortable="true">Variedad</th>
+                                <th data-field="Producer" data-align="center" data-sortable="true">Productor</th>
+                                <th data-field="SampleWeight" data-align="center" data-sortable="true">Peso de la Muestra</th>
+                                <th data-field="HumidityPercent" data-align="center" data-sortable="true">Humedad</th>
+                                <th data-field="WalnutNumber" data-align="center" data-sortable="true">No.Nueces por Kilo</th>
+                                <th data-field="Performance" data-align="center" data-sortable="true">Rendimiento</th>
+                                <th data-field="TotalWeightOfEdibleNuts" data-align="center" data-sortable="true">Total</th>
+                                <th data-align="center" data-formatter="operateFormatterGrillCurrentInv" data-events="operateEventsCurrentInv">Operaciones</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
